Fix card text spacing

--- a/style.css
+++ b/style.css
@@ -118,6 +118,10 @@ h1 {
   list-style-type: disc;
 }
 
+.skills .card li {
+  margin-bottom: 3px;
+}
+
 .skills .card:nth-child(1) {
   border-bottom: 6px solid #f58d23;
 }
